# messaging-app

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
migrations/: 20231028223906_add_users.down.sql  20231028223906_add_users.up.sql
src/: errors.rs  handlers.rs  http.rs  main.rs  setup.rs
src/auth/: handlers.rs  http.rs  jwt_repository.rs  mod.rs  models.rs  repository.rs
src/cache/: memory_repository.rs  mod.rs  redis_repository.rs  repository.rs
src/channel/: handlers.rs  memory_repository.rs  mod.rs  models.rs  repository.rs
src/event/: memory_repository.rs  mod.rs  models.rs  redis_repository.rs  repository.rs
src/gateway/: handlers.rs  models.rs
src/message/: handlers.rs  memory_repository.rs  mod.rs  models.rs  repository.rs
src/messaging/: memory_repository.rs  mod.rs  redis_repository.rs  repository.rs
src/user/: memory_repository.rs  mod.rs  models.rs  postgres_repository.rs  repository.rs
