[package]
name = "messaging-app"
version = "0.1.0"
edition = "2021"
resolver = "2"

[features]
full = [
    "dotenv",
    "http-trace",
    "http-cors",
    "json-log",
    "postgres-redis-repository",
]
development = ["dotenv", "http-trace", "http-cors"]
production = [
    "http-trace",
    "http-cors",
    "json-log",
    "postgres-redis-repository",
]

dotenv = ["dep:dotenvy"]
http-trace = ["tower-http/trace"]
http-cors = ["tower-http/cors"]
json-log = ["tracing-subscriber/json"]

postgres-redis-repository = ["dep:sqlx", "dep:deadpool-redis"]

[dependencies]
tokio = { version = "1", features = ["full"] }
dotenvy = { version = "0.15", optional = true }

axum = { version = "0.6", features = ["tracing", "ws"] }
tower-http = { version = "0.4", features = ["normalize-path", "catch-panic"] }
tokio-tungstenite = "0.20"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
jsonwebtoken = "9"

rand = "0.8"
bcrypt = "0.15"
uuid = { version = "1.4", features = ["v4", "fast-rng", "serde"] }
mime = "0.3"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

thiserror = "1.0"
async-trait = "0.1"

sqlx = { version = "0.7", optional = true, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "any",
    "chrono",
] }

deadpool-redis = { version = "0.13", optional = true, features = [
    "rt_tokio_1",
] }

[profile.release]
panic = "unwind"
lto = true
codegen-units = 1
